relm4-macros/tests/ui/compile-fail/no-view-output.stderr
error: expected an injection point for the view macro. Try using `let widgets = view_output!();`
  --> tests/ui/compile-fail/no-view-output.rs:15:5
   |
15 | /     #[allow(unreachable_code)]
16 | |     fn init(
17 | |         _: (),
18 | |         root: Self::Root,
...  |
25 | |         ComponentParts { model, widgets }
26 | |     }
   | |_____^
